option('tests', type: 'feature', description: 'build tests')
option('examples', type: 'feature', description: 'build examples')
option('libc', type: 'boolean', value: false, description: 'build qjs standard library modules as part of the library')
option('cli_mimalloc', type: 'feature', value: 'disabled', description: 'build qjs cli with mimalloc')
option('docdir', type: 'string', description: 'documentation directory')
option('disable_parser', type: 'boolean', value: false, description: 'Disable JS source code parser')
